<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/calculateFragment"
            android:title="@string/Calculator" />
        <item
            android:id="@+id/webViewFragment"
            android:title="@string/WebView" />
        <item
            android:id="@+id/AudioRecordFragment"
            android:title="@string/AudioPlayer" />
        <item
            android:id="@+id/SensorsFragment"
            android:title="@string/Sensors" />
        <item
            android:id="@+id/CameraFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Camera" />
        <item
            android:id="@+id/MusicPlayer"
            android:title="@string/MusicPlayer" />
        <item
            android:id="@+id/SettingsFragment"
            android:title="@string/Settings" />
        <item
            android:id="@+id/StoriesFragment"
            android:title="@string/Stories" />
    </group>
</menu>